# test-task-nanimai-python

./: .example.env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_data.sql
app/: config.py  main.py
app/balance/: interface.py  models.py  repository.py  schemas.py  service.py
app/balance/api/: grpc.py  http.py
app/transaction/: interface.py  models.py  repository.py  service.py
app/user/: interface.py  models.py  repository.py  service.py
app/utils/auth/: depends.py  external_jwt.py  interfaces.py  service.py
app/utils/db/: session.py
app/utils/db/migrations/: env.py
app/utils/task_queue/: celery_worker.py
proto/: balance.proto
