[project]
name = "user-balance-service"
version = "0.1.0"
description = ""
authors = [
    {name = "FILIkR",email = "rejfiln@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "grpcio (>=1.74.0,<2.0.0)",
    "grpclib (>=0.4.8,<0.5.0)"
]

[tool.poetry]
packages = [{include = "user_balance_service", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
